--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="sketch.js"></script>
     <script src="Movie.js"></script>
     <script src="Word.js"></script>
+    <script src="Bar.js"></script>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
   </body>
